feat: 🎸 fix height on notifications

--- a/apps/frontend/src/app/components/dashboard-sections/dashboard-notification-section/dashboard-notification-section.component.html
+++ b/apps/frontend/src/app/components/dashboard-sections/dashboard-notification-section/dashboard-notification-section.component.html
@@ -1,6 +1,6 @@
 <h1>Notifications</h1>
 <hr />
-<section class="item-container">
+<section class="item-container" style="max-height: none;">
   <frontend-car-notification-widget></frontend-car-notification-widget>
   <frontend-tasks-notification-widget></frontend-tasks-notification-widget>
   <frontend-bike-notification-widget></frontend-bike-notification-widget>
