Updated gramer in pages

--- a/apps/frontend/src/app/pages/assignments/update-assignment-dialog/update-assignment-dialog.component.html
+++ b/apps/frontend/src/app/pages/assignments/update-assignment-dialog/update-assignment-dialog.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit()" class="dialog-container">
   <div class="title-container">
-    <h1>Add Assignment</h1>
+    <h1>Update Assignment</h1>
     <button mat-dialog-close type="button" class="close-dialog-btn">X</button>
   </div>
   <hr />
