--- a/apps/frontend/src/app/pages/bikes/create-bike-entry-dialog/create-bike-dialog.component.html
+++ b/apps/frontend/src/app/pages/bikes/create-bike-entry-dialog/create-bike-dialog.component.html
@@ -85,7 +85,7 @@
   </mat-form-field>
 
   <label class="checkbox-container">
-    The guest has filled out the bike form
+    The guest has completed the bike form
     <input
       type="checkbox"
       [checked]="bikeFormCompleted"
