--- a/apps/frontend/src/app/pages/page-not-found/page-not-found.component.html
+++ b/apps/frontend/src/app/pages/page-not-found/page-not-found.component.html
@@ -2,13 +2,11 @@
   <h1>404</h1>
 
   <h2>Page not found</h2>
-  <p>
-    I tried to catch some fog, but I mist. If you are having issues, feel free to send us an e-mail
-    at:
+  <p id="not-found-text">
+    We are sorry, there was and error finding the correct page. Please try again. If you are having
+    issues, feel free to send us an e-mail at:
   </p>
-  <a id="mailto" class="link" href="mailto:helpomnihost.dk" target="_blank" rel="noopener">
-    helpomnihost.dk
-  </a>
+  <a id="mailto" href="mailto:helpomnihost.dk" target="_blank" rel="noopener"> helpomnihost.dk </a>
 
   <div class="m-1">
     <button mat-raised-button class="mr-1 secondary-btn" onclick="history.back()">Back</button>
