--- a/apps/frontend/src/app/components/table-info-dialog/table-info-dialog.component.html
+++ b/apps/frontend/src/app/components/table-info-dialog/table-info-dialog.component.html
@@ -7,7 +7,7 @@
   <table class="info-table">
     <tr class="header">
       <th>Name</th>
-      <th>Explanation</th>
+      <th>Description</th>
     </tr>
     <tr *ngFor="let attribute of displayInfo?.tableInformation">
       <td class="name">{{ attribute.name }}</td>
