--- a/apps/frontend/src/app/components/blacklist-widget/blacklist-widget.component.html
+++ b/apps/frontend/src/app/components/blacklist-widget/blacklist-widget.component.html
@@ -1,8 +1,12 @@
 <div class="blacklist-widget-container" *ngIf="!isLoading">
   <div class="image-container">
-    <span class="img-arrows" (click)="previousImage()">&lt;</span>
+    <span class="img-arrows" (click)="previousImage()">
+      <span *ngIf="files.length !== 1">&lt;</span>
+    </span>
     <img [src]="files[currentImage]" class="image" />
-    <span class="img-arrows" (click)="nextImage()">&gt;</span>
+    <span class="img-arrows" (click)="nextImage()">
+      <span *ngIf="files.length !== 1">&gt;</span>
+    </span>
   </div>
 
   <div class="text-container">
