--- a/apps/frontend/src/app/pages/checkout/create-checkout-dialog/create-checkout-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkout/create-checkout-dialog/create-checkout-dialog.component.html
@@ -1,3 +1,10 @@
+<frontend-file-upload
+  #fileUpload
+  [parentType]="'luggages'"
+  (submissionFinishedEvent)="finalizeSubmission($event)"
+  (containsInvalidFilesEvent)="updateFilesStatus($event)"
+></frontend-file-upload>
+
 <form (ngSubmit)="onSubmit()" [formGroup]="form" class="dialog-container">
   <div class="title-container">
     <h1>Create Check Out</h1>
