Added file upload to Long Term and Checkin/out and fixed styling

--- a/apps/frontend/src/app/pages/longterm/create-long-term-dialog/create-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/create-long-term-dialog/create-long-term-dialog.component.html
@@ -1,3 +1,10 @@
+<frontend-file-upload
+  #fileUpload
+  [parentType]="'luggages'"
+  (submissionFinishedEvent)="finalizeSubmission($event)"
+  (containsInvalidFilesEvent)="updateFilesStatus($event)"
+></frontend-file-upload>
+
 <form
   [formGroup]="form"
   (ngSubmit)="onSubmit()"
