--- a/apps/frontend/src/app/pages/longterm/update-long-term-dialog/update-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/update-long-term-dialog/update-long-term-dialog.component.html
@@ -1,3 +1,11 @@
+<frontend-file-upload
+  #fileUpload
+  [parentType]="'luggages'"
+  [existingFiles]="files"
+  (submissionFinishedEvent)="finalizeSubmission($event)"
+  (containsInvalidFilesEvent)="updateFilesStatus($event)"
+></frontend-file-upload>
+
 <form
   [formGroup]="form"
   (ngSubmit)="onSubmit()"
