--- a/apps/frontend/src/assets/styles/table.scss
+++ b/apps/frontend/src/assets/styles/table.scss
@@ -10,7 +10,7 @@ table {
 
 .comments-field {
   padding: 10px !important;
-  text-align: left !important;
+  text-align: center !important;
 }
 
 .small-field {
