--- a/apps/frontend/src/app/components/view-images-dialog/view-images-dialog.component.scss
+++ b/apps/frontend/src/app/components/view-images-dialog/view-images-dialog.component.scss
@@ -24,12 +24,12 @@
   align-items: center;
 }
 
-h2 {
+h2, h3 {
   margin-bottom: 0;
 }
 
 hr {
-  border-top: 2px solid grey;
+  border-top: 1px solid grey;
 }
 
 .title-container {
@@ -40,4 +40,8 @@ hr {
   white-space: nowrap;
   text-overflow: ellipsis;
   margin: 0 0 0.5em 0.5em;
+}
+
+::ng-deep.mat-dialog-container {
+  max-height: 90vh;
 }
