--- a/apps/frontend/src/app/pages/announcements/announcements.component.html
+++ b/apps/frontend/src/app/pages/announcements/announcements.component.html
@@ -44,7 +44,7 @@
       <ng-container matColumnDef="comments">
         <th mat-header-cell *matHeaderCellDef>Description</th>
         <td mat-cell *matCellDef="let item" class="comments-field" (click)="openEditDialog(item)">
-          {{ item.comments }}
+          {{ displayComments(item.comments) }}
         </td>
       </ng-container>
 
