Revert "add example of potential solution - wip"
This reverts commit ae44c6e6d166a7a1e9e6de4d21aa53f5538c8ad0.

--- a/apps/frontend/src/app/pages/checkout/update-checkout-dialog/update-checkout-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkout/update-checkout-dialog/update-checkout-dialog.component.html
@@ -104,33 +104,7 @@
 
     <mat-form-field class="remove-error-message">
       <mat-label>Time out</mat-label>
-      <input onclick="this.showPicker()" matInput type="time" list="times" min="09:00" step="900" formControlName="completedAt" />
-      <datalist id="times">
-        <option value="01:00:00">
-        <option value="02:00:00">
-        <option value="03:00:00">
-        <option value="04:00:00">
-        <option value="05:00:00">
-        <option value="06:00:00">
-        <option value="07:00:00">
-        <option value="08:00:00">
-        <option value="09:00:00">
-        <option value="10:00:00">
-        <option value="11:00:00">
-        <option value="12:00:00">
-        <option value="13:00:00">
-        <option value="14:00:00">
-        <option value="15:00:00">
-        <option value="16:00:00">
-        <option value="17:00:00">
-        <option value="18:00:00">
-        <option value="19:00:00">
-        <option value="20:00:00">
-        <option value="21:00:00">
-        <option value="22:00:00">
-        <option value="23:00:00">
-        <option value="00:00:00">
-    </datalist>
+      <input onclick="this.showPicker()" matInput type="time" formControlName="completedAt" />
     </mat-form-field>
   </div>
 
