--- a/apps/frontend/src/app/pages/announcements/announcements.component.html
+++ b/apps/frontend/src/app/pages/announcements/announcements.component.html
@@ -27,6 +27,7 @@
       </button>
       <button mat-raised-button class="action-btn" (click)="openCreateDialog()">
         Add Announcement
+        <mat-icon>https</mat-icon>
       </button>
     </div>
   </div>
