fix: 🐛 fix checkin time select in the future

--- a/apps/frontend/src/app/pages/checkin/create-checkin-dialog/create-checkin-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkin/create-checkin-dialog/create-checkin-dialog.component.html
@@ -91,6 +91,9 @@
     <mat-form-field class="remove-error-message">
       <mat-label>Time in room</mat-label>
       <input onclick="this.showPicker()" matInput type="time" formControlName="completedAt" />
+      <mat-error *ngIf="form.get('completedAt')?.invalid && form.get('completedAt')?.dirty">
+        Can't be in the future
+      </mat-error>
     </mat-form-field>
   </div>
 
