--- a/apps/frontend/src/app/pages/checkin/create-checkin-dialog/create-checkin-dialog.component.html
+++ b/apps/frontend/src/app/pages/checkin/create-checkin-dialog/create-checkin-dialog.component.html
@@ -33,22 +33,20 @@
   <mat-form-field autocomplete="off" class="full-width">
     <mat-label>Name</mat-label>
     <input #name type="text" formControlName="name" matInput placeholder="Johnson" />
-    <mat-error *ngIf="form.get('name')?.invalid && form.get('name')?.dirty"> Required </mat-error>
+    <mat-error> Required </mat-error>
   </mat-form-field>
 
   <div class="dialog-row">
     <mat-form-field autocomplete="off">
       <mat-label>Nr of bags</mat-label>
       <input #bags type="text" formControlName="bags" matInput placeholder="1+3" />
-      <mat-error *ngIf="form.get('bags')?.invalid && form.get('bags')?.dirty"> Required </mat-error>
+      <mat-error> Required </mat-error>
     </mat-form-field>
 
     <mat-form-field autocomplete="off">
       <mat-label>Tag nr</mat-label>
       <input #tagNr type="number" formControlName="tagNr" matInput placeholder="123" />
-      <mat-error *ngIf="form.get('tagNr')?.invalid && form.get('tagNr')?.dirty">
-        Required
-      </mat-error>
+      <mat-error> Required </mat-error>
     </mat-form-field>
   </div>
 
