--- a/apps/frontend/src/app/pages/longterm/create-long-term-dialog/create-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/create-long-term-dialog/create-long-term-dialog.component.html
@@ -32,6 +32,7 @@
     <mat-form-field autocomplete="off">
       <mat-label>Date in</mat-label>
       <input onclick="this.showPicker()" matInput type="datetime-local" formControlName="dateIn" />
+      <mat-error> Required </mat-error>
     </mat-form-field>
   </div>
 
@@ -39,13 +40,13 @@
     <mat-form-field autocomplete="off">
       <mat-label>Name</mat-label>
       <input #name type="text" formControlName="name" matInput placeholder="John Doe" />
-      <mat-error *ngIf="form.get('name')?.invalid && form.get('name')?.dirty"> Required </mat-error>
+      <mat-error> Required </mat-error>
     </mat-form-field>
 
     <mat-form-field autocomplete="off" class="input one-third">
       <mat-label>Nr of bags</mat-label>
       <input #bags type="text" formControlName="bags" matInput placeholder="1+3" />
-      <mat-error *ngIf="form.get('bags')?.invalid && form.get('bags')?.dirty"> Required </mat-error>
+      <mat-error> Required </mat-error>
     </mat-form-field>
   </div>
 
@@ -53,9 +54,7 @@
     <mat-form-field autocomplete="off" class="input one-third">
       <mat-label>Tag nr</mat-label>
       <input #tagNr type="text" formControlName="tagNr" matInput placeholder="123" />
-      <mat-error *ngIf="form.get('tagNr')?.invalid && form.get('tagNr')?.dirty">
-        Required
-      </mat-error>
+      <mat-error> Required </mat-error>
     </mat-form-field>
 
     <mat-form-field class="remove-error-message">
