--- a/apps/frontend/src/app/pages/cars/update-car-entry-dialog/update-car-dialog.component.html
+++ b/apps/frontend/src/app/pages/cars/update-car-entry-dialog/update-car-dialog.component.html
@@ -28,21 +28,21 @@
     <mat-form-field autocomplete="off">
       <mat-label>Tag nr.</mat-label>
       <input #tagNr type="number" formControlName="tagNr" matInput placeholder="123" />
-      <mat-error *ngIf="form.get('tagNr')?.invalid && form.get('tagNr')?.dirty">
-        Required
-      </mat-error>
+      <mat-error> Required </mat-error>
     </mat-form-field>
   </div>
 
   <div class="dialog-row">
-    <mat-form-field class="remove-error-message">
+    <mat-form-field>
       <mat-label>Arrival Date</mat-label>
       <input onclick="this.showPicker()" matInput type="date" formControlName="arrivalDate" />
+      <mat-error> Required </mat-error>
     </mat-form-field>
 
-    <mat-form-field class="remove-error-message">
+    <mat-form-field>
       <mat-label>Departure Date</mat-label>
       <input onclick="this.showPicker()" matInput type="date" formControlName="departureDate" />
+      <mat-error> Required </mat-error>
     </mat-form-field>
   </div>
 
@@ -50,7 +50,7 @@
     <mat-form-field autocomplete="off" class="full-width">
       <mat-label>Name</mat-label>
       <input #name type="text" formControlName="name" matInput placeholder="Johnson" />
-      <mat-error *ngIf="form.get('name')?.invalid && form.get('name')?.dirty"> Required </mat-error>
+      <mat-error> Required </mat-error>
     </mat-form-field>
 
     <mat-form-field autocomplete="off">
@@ -62,14 +62,12 @@
         matInput
         placeholder="AB12345"
       />
-      <mat-error *ngIf="form.get('licensePlate')?.invalid && form.get('licensePlate')?.dirty">
-        Required
-      </mat-error>
+      <mat-error> Required </mat-error>
     </mat-form-field>
   </div>
 
   <div class="dialog-row">
-    <mat-form-field class="remove-error-message">
+    <mat-form-field>
       <mat-label>Park expiration</mat-label>
       <input
         onclick="this.showPicker()"
@@ -77,9 +75,10 @@
         type="datetime-local"
         formControlName="expirationDate"
       />
+      <mat-error> Required </mat-error>
     </mat-form-field>
 
-    <mat-form-field class="remove-error-message">
+    <mat-form-field>
       <mat-label>Pick up time</mat-label>
       <input
         onclick="this.showPicker()"
@@ -87,6 +86,7 @@
         type="datetime-local"
         formControlName="pickUpTime"
       />
+      <mat-error> Required </mat-error>
     </mat-form-field>
   </div>
 
@@ -105,9 +105,7 @@
     <mat-form-field autocomplete="off">
       <mat-label>Parking lot</mat-label>
       <input type="text" formControlName="parkingLot" matInput placeholder="Front of hotel" />
-      <mat-error *ngIf="form.get('parkingLot')?.invalid && form.get('parkingLot')?.dirty">
-        Required
-      </mat-error>
+      <mat-error> Required </mat-error>
     </mat-form-field>
   </div>
 
@@ -161,9 +159,7 @@
   <mat-form-field autocomplete="off" class="full-width">
     <mat-label>Comments</mat-label>
     <input #comments type="text" formControlName="comments" matInput placeholder="Comments" />
-    <mat-error *ngIf="form.get('comments')?.invalid && form.get('comments')?.dirty">
-      Required
-    </mat-error>
+    <mat-error> Required </mat-error>
   </mat-form-field>
 
   <div class="dialog-row">
