--- a/apps/frontend/src/app/pages/bikes/create-bike-entry-dialog/create-bike-dialog.component.html
+++ b/apps/frontend/src/app/pages/bikes/create-bike-entry-dialog/create-bike-dialog.component.html
@@ -21,7 +21,7 @@
     <mat-form-field autocomplete="off" class="full-width">
       <mat-label>Name</mat-label>
       <input #name type="text" formControlName="name" matInput placeholder="Name" />
-      <mat-error *ngIf="form.get('name')?.invalid && form.get('name')?.dirty"> Required </mat-error>
+      <mat-error> Required </mat-error>
     </mat-form-field>
   </div>
 
@@ -51,14 +51,12 @@
         matInput
         placeholder="Number of bikes"
       />
-      <mat-error *ngIf="form.get('nrOfBikes')?.invalid && form.get('nrOfBikes')?.dirty">
-        Must be a number from 1-99
-      </mat-error>
+      <mat-error> Must be a number from 1-99 </mat-error>
     </mat-form-field>
   </div>
 
   <div class="dialog-row">
-    <mat-form-field class="remove-error-message">
+    <mat-form-field>
       <mat-label>Pick up time</mat-label>
       <input
         onclick="this.showPicker()"
@@ -66,6 +64,7 @@
         type="datetime-local"
         formControlName="pickUpTime"
       />
+      <mat-error> Required </mat-error>
     </mat-form-field>
 
     <mat-form-field class="remove-error-message">
