--- a/apps/frontend/src/app/pages/bikes/update-bike-entry-dialog/update-bike-dialog.component.html
+++ b/apps/frontend/src/app/pages/bikes/update-bike-entry-dialog/update-bike-dialog.component.html
@@ -20,7 +20,7 @@
     <mat-form-field autocomplete="off">
       <mat-label>Name</mat-label>
       <input #name type="text" formControlName="name" matInput placeholder="Madsen" />
-      <mat-error *ngIf="form.get('name')?.invalid && form.get('name')?.dirty"> Required </mat-error>
+      <mat-error> Required </mat-error>
     </mat-form-field>
   </div>
 
@@ -28,9 +28,7 @@
     <mat-form-field autocomplete="off">
       <mat-label>Number of bikes</mat-label>
       <input #nrOfBikes type="number" formControlName="nrOfBikes" matInput placeholder="123" />
-      <mat-error *ngIf="form.get('nrOfBikes')?.invalid && form.get('nrOfBikes')?.dirty">
-        Must be a number from 1-99
-      </mat-error>
+      <mat-error> Must be a number from 1-99 </mat-error>
     </mat-form-field>
 
     <mat-form-field autocomplete="off">
@@ -51,7 +49,7 @@
   </div>
 
   <div class="dialog-row">
-    <mat-form-field class="remove-error-message">
+    <mat-form-field>
       <mat-label>Pick up time</mat-label>
       <input
         onclick="this.showPicker()"
@@ -59,6 +57,7 @@
         type="datetime-local"
         formControlName="pickUpTime"
       />
+      <mat-error> Required </mat-error>
     </mat-form-field>
 
     <mat-form-field class="remove-error-message">
