Add a loading icon while document are loading

--- a/apps/frontend/src/app/components/blacklist-widget/blacklist-widget.component.html
+++ b/apps/frontend/src/app/components/blacklist-widget/blacklist-widget.component.html
@@ -29,3 +29,8 @@
     </button>
   </div>
 </div>
+<div class="blacklist-widget-container loading-icon-wrapper" *ngIf="isLoading">
+  <div class="btn-spinner">
+    <mat-icon><mat-spinner diameter="21" color="white"></mat-spinner></mat-icon>
+  </div>
+</div>
