--- a/apps/frontend/src/app/components/blacklist-widget/blacklist-widget.component.scss
+++ b/apps/frontend/src/app/components/blacklist-widget/blacklist-widget.component.scss
@@ -101,3 +101,9 @@ mat-icon {
     font-size: 20px;
   }
 }
+
+.loading-icon-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+}
