--- a/apps/frontend/src/app/components/blacklist-widget/blacklist-widget.component.scss
+++ b/apps/frontend/src/app/components/blacklist-widget/blacklist-widget.component.scss
@@ -16,7 +16,7 @@
     height: 50%;
     width: auto;
     overflow-y: hidden;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 
     .img-arrows {
