--- a/apps/frontend/src/app/components/view-images-dialog/view-images-dialog.component.scss
+++ b/apps/frontend/src/app/components/view-images-dialog/view-images-dialog.component.scss
@@ -6,12 +6,13 @@
   overflow: scroll;
 
   .image,
-  .video {
+  .video,
+  .document {
     height: 500px;
     width: auto;
     margin: 10px 5px;
   }
-
+  
   &.center-item {
     justify-content: center;
   }
