--- a/apps/frontend/src/app/app.component.scss
+++ b/apps/frontend/src/app/app.component.scss
@@ -179,3 +179,16 @@ mat-divider {
     box-shadow: none !important;
   }
 }
+
+.notification-number {
+  border-radius: 50%;
+  border: solid white 2px;
+  font-size: x-small;
+  width: 15px;
+  height: 15px;
+  background-color: var(--main-blue);
+  color: white !important;
+  text-align: center;
+  position: absolute;
+  left: 35px;
+}
