--- a/apps/frontend/src/app/app.component.scss
+++ b/apps/frontend/src/app/app.component.scss
@@ -139,6 +139,12 @@ mat-divider {
     color: var(--main-blue);
     margin-right: 20px;
   }
+
+  .notification-number {
+    border: solid white 2px;
+    background-color: var(--main-blue);
+    color: white;
+  }
 }
 
 .collapsed {
@@ -181,13 +187,13 @@ mat-divider {
 }
 
 .notification-number {
+  border: solid var(--main-blue) 2px;
   border-radius: 50%;
-  border: solid white 2px;
+  background-color: white;
+  color: var(--main-blue);
   font-size: x-small;
   width: 15px;
   height: 15px;
-  background-color: var(--main-blue);
-  color: white !important;
   text-align: center;
   position: absolute;
   left: 35px;
