--- a/apps/frontend/src/app/app.component.html
+++ b/apps/frontend/src/app/app.component.html
@@ -117,11 +117,11 @@
           routerLink="/announcements"
         >
           <p
-            *ngIf="notificationPresent"
+            *ngIf="newNotifications"
             class="notification-number"
             [ngClass]="{ 'active-nav': title !== 'Announcements' }"
           >
-            1
+            {{ newNotifications }}
           </p>
           <mat-icon aria-hidden="false" data-cy="icon">announcement </mat-icon>
           <span
