Fix the E2E tests

--- a/apps/frontend/src/app/pages/longterm/update-long-term-dialog/update-long-term-dialog.component.html
+++ b/apps/frontend/src/app/pages/longterm/update-long-term-dialog/update-long-term-dialog.component.html
@@ -19,7 +19,7 @@
   <hr />
 
   <div class="dialog-row">
-    <mat-form-field autocomplete="off">
+    <mat-form-field autocomplete="off" data-cy="input-field-room">
       <mat-label>Room nr.</mat-label>
       <input #room matInput type="number" formControlName="room" [matAutocomplete]="roomOptions" />
       <mat-autocomplete autoActiveFirstOption #roomOptions="matAutocomplete">
